--- a/css/main.css
+++ b/css/main.css
@@ -205,6 +205,8 @@ textarea {
 }
 
 .post-tile-image .post-tile-primary-content{
+    height: 200px;
+    width: 200px;
     background-image: url('/img/no-image.jpg');
     background-size: 100%;
     background-repeat: no-repeat;
@@ -216,6 +218,8 @@ textarea {
 }
 
 .post-tile-text .post-tile-primary-content{
+    height: 200px;
+    width: 200px;
     display: table-cell;
     vertical-align: middle;
     text-align: center;
