--- a/css/main.css
+++ b/css/main.css
@@ -186,6 +186,10 @@ textarea {
     overflow: hidden;
 }
 
+.post-tile * {
+    font-size: 0.81em;
+}
+
 .post-tile-multi .post-tile-primary-content {
     height: 150px;
     width: 200px;
@@ -197,7 +201,6 @@ textarea {
 }
 
 .post-tile-multi .post-tile-secondary-content {
-    font-size: 0.8em;
 }
 
 .post-tile-image .post-tile-primary-content{
@@ -217,7 +220,6 @@ textarea {
     width: 200px;
     display: table-cell;
     vertical-align: middle;
-    font-size: 0.8em;
 }
 
 .post-tile-text .post-tile-secondary-content{
