--- a/css/main.css
+++ b/css/main.css
@@ -311,6 +311,9 @@ textarea {
 
 #post-message-pic {
     display: inline;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: 100%;
 }
 
 #post-message-user {
