--- a/css/main.css
+++ b/css/main.css
@@ -316,6 +316,8 @@ textarea {
 }
 
 #post-message-pic {
+    height: 50px;
+    width: 50px;
     display: inline;
     background-position: center center;
     background-repeat: no-repeat;
