--- a/css/main.css
+++ b/css/main.css
@@ -318,7 +318,7 @@ textarea {
 #post-message-pic {
     height: 50px;
     width: 50px;
-    display: inline;
+    display: inline-block;
     background-position: center center;
     background-repeat: no-repeat;
     background-size: 100%;
