--- a/css/main.css
+++ b/css/main.css
@@ -127,8 +127,8 @@ textarea {
 .selected-nav {
     color: #ef0f0d !important;
     text-decoration: none !important;
-    border: 1px solid #dddddd !important;
-    background: #ffffff url(images/ui-bg_glass_65_ffffff_1x400.png) 50% 50% repeat-x !important;
+    border: 1px solid #0073ea !important;
+    background: #0073ea url(images/ui-bg_highlight-soft_25_0073ea_1x100.png) 50% 50% repeat-x !important;
 }
 
 /*.header.row {
