--- a/css/main.css
+++ b/css/main.css
@@ -328,6 +328,10 @@ textarea {
     font-style: italic;
 }
 
+.post-comment {
+	
+}
+
 div.right-toolbar-button {
     display: inline-block;
     margin-left: 5px;
