--- a/css/main.css
+++ b/css/main.css
@@ -334,6 +334,10 @@ textarea {
 	font-size: 0.85em !important;
 }
 
+.post-comment a:hover {
+	text-decoration: underline;
+}
+
 div.right-toolbar-button {
     display: inline-block;
     margin-left: 5px;
