--- a/css/main.css
+++ b/css/main.css
@@ -334,6 +334,12 @@ textarea {
 	font-size: 0.85em !important;
 }
 
+.post-comment .ui-state-default {
+	padding: 5px;
+	margin-bottom: 2px;
+	font-size: 0.9em !important;
+}
+
 .post-comment a:hover {
 	text-decoration: underline;
 }
