--- a/css/main.css
+++ b/css/main.css
@@ -337,6 +337,7 @@ textarea {
 .post-comment .ui-state-default {
 	padding: 5px;
 	margin-bottom: 2px;
+	position: relative;
 }
 
 .post-comment-user-image {
@@ -346,6 +347,16 @@ textarea {
 	height: 40px;
 	background-repeat: no-repeat;
 	display: inline-block;
+}
+
+.post-comment-user-name {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	height: 1em;
+	margin-top: auto;
+	margin-bottom: auto;
+	margin-left: 5px;
 }
 
 .post-comment a:hover {
