--- a/css/main.css
+++ b/css/main.css
@@ -148,7 +148,7 @@ textarea {
     right: 0;
     /*position: absolute;*/
    	position: fixed;
-    bottom: 0;
+    /*bottom: 0;*/
     top: 60px;
     border-left: 8px solid #ccc;
 }
