--- a/css/main.css
+++ b/css/main.css
@@ -204,7 +204,7 @@ textarea {
 .post-tile-multi .post-tile-primary-content {
     height: 150px;
     width: 200px;
-    background-image: url('/img/no-image.jpg');
+    background-image: url('/img/no-image.png');
     background-size: 75%;
     background-repeat: no-repeat;
     background-position: center center;
@@ -275,7 +275,7 @@ textarea {
     background-position: center center;
     background-size: 50%;
     background-repeat: no-repeat;
-    background-image: url("/img/no-image.jpg");
+    background-image: url("/img/no-image.png");
     height: 200px;
 }
 
