--- a/css/main.css
+++ b/css/main.css
@@ -151,6 +151,7 @@ textarea {
     /*bottom: 0;*/
     /*top: 60px;*/
     border-left: 5px solid #ccc;
+    border-top: 5px solid #ccc;
 }
 
 .body.row {
