--- a/css/main.css
+++ b/css/main.css
@@ -146,10 +146,8 @@ textarea {
 #right-panel {
     width: 360px;
     right: 0;
-    /*position: absolute;*/
    	position: fixed;
-    /*bottom: 0;*/
-    /*top: 60px;*/
+    top: 60px;
     border-left: 5px solid #ccc;
     border-top: 5px solid #ccc;
 }
