--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,11 @@ textarea {
 html {
     font-size: 0.85em;
     line-height: 1.4;
+    overflow: hidden;
+}
+
+body {
+	overflow: hidden;
 }
 
 /*
