--- a/css/main.css
+++ b/css/main.css
@@ -159,6 +159,11 @@ textarea {
 
 .ajax-loading-div {
 	background: white;
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
 }
 
 .body.row {
