--- a/css/main.css
+++ b/css/main.css
@@ -160,6 +160,8 @@ textarea {
 .ajax-loading-div {
 	background: white;
 	background-image: url('/img/ajax.gif');
+	background-position: center center;
+	background-repeat: no-repeat;
 	position: absolute;
 	left: 0;
 	right: 0;
