--- a/css/main.css
+++ b/css/main.css
@@ -150,11 +150,15 @@ textarea {
 
 #right-panel {
     width: 360px;
-    right: 0;
-   	position: fixed;
+    /*right: 0;*/
+   	position: absolute;
     border-left: 5px solid #ccc;
     border-top: 5px solid #ccc;
     border-bottom: 5px solid #ccc;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .ajax-loading-div {
