--- a/css/main.css
+++ b/css/main.css
@@ -149,12 +149,21 @@ textarea {
 }
 
 #right-panel {
-    width: 360px;
-    /*right: 0;*/
-   	position: absolute;
+    /*width: 360px;
+   	position: fixed;
     border-left: 5px solid #ccc;
     border-top: 5px solid #ccc;
-    border-bottom: 5px solid #ccc;
+    border-bottom: 5px solid #ccc;*/
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.floating-dialog {
+	width: 500px;
+   	position: fixed;
+    border: 5px solid #ccc;
     left: 0;
     right: 0;
     margin-left: auto;
