--- a/css/main.css
+++ b/css/main.css
@@ -148,7 +148,7 @@ textarea {
     left: 0;
 }
 
-#right-panel {
+#post-details-panel {
     /*width: 360px;
    	position: fixed;
     border-left: 5px solid #ccc;
@@ -156,7 +156,7 @@ textarea {
     border-bottom: 5px solid #ccc;*/
 }
 
-.floating-dialog {
+.floating-panel {
 	width: 500px;
    	position: fixed;
     border: 5px solid #ccc;
