--- a/css/main.css
+++ b/css/main.css
@@ -268,7 +268,7 @@ textarea {
 
 #post-image-container {
     padding: 10px;
-    height: 300px;
+    height: 350px;
 }
 
 #post-image-container > * {
@@ -279,8 +279,8 @@ textarea {
     background-position: center center;
     border: 1px solid #ccc;
     background-repeat: no-repeat;
-    background-size: 100%;
-    height: 300px;
+    background-size: auto 100%;
+    height: 350px;
 }
 
 #overlay-app-loading {
