--- a/css/main.css
+++ b/css/main.css
@@ -391,23 +391,13 @@ div.right-toolbar-button {
     display: none;
 }
 
-#group-feed {
-    /*left: 200px;
-   	right: 0;
-    top: 0;
-    bottom: 0;
-    position: absolute;
-    margin-top: -5px;*/
+#post-feed {
    margin-left: 200px;
    margin-top: 60px;
 }
 
 #left-rail {
     width: 180px;
-    /*
-    bottom: 0;
-    top: 0;
-    position: absolute;*/
    	position: fixed;
     padding: 5px;
 }
@@ -446,39 +436,6 @@ p {
     margin: 0; 
     padding: 0; 
 }
-
-/*.post-caption:before {
-    content:"";
-    float: left;
-    width: 5px; 
-    height: 55px; 
-}
-
-.post-caption > *:first-child {
-    float: right;
-    width: 100%;
-    margin-left: -5px; }        
-
-.post-caption:after {
-    content: "\02026";  
-
-    box-sizing: content-box;
-    -webkit-box-sizing: content-box;
-    -moz-box-sizing: content-box;
-
-    float: right; position: relative;
-    top: -25px; left: 100%; 
-    width: 3em; margin-left: -3em;
-    padding-right: 5px;
-
-    text-align: right;
-
-    background: -webkit-gradient(linear, left top, right top,
-        from(rgba(255, 255, 255, 0)), to(white), color-stop(50%, white));
-    background: -moz-linear-gradient(to right, rgba(255, 255, 255, 0), white 50%, white);           
-    background: -o-linear-gradient(to right, rgba(255, 255, 255, 0), white 50%, white);
-    background: -ms-linear-gradient(to right, rgba(255, 255, 255, 0), white 50%, white);
-    background: linear-gradient(to right, rgba(255, 255, 255, 0), white 50%, white); }*/
 
 /* ==========================================================================
    Helper classes
