--- a/css/main.css
+++ b/css/main.css
@@ -172,6 +172,7 @@ textarea {
 	background-image: url('/img/ajax.gif');
 	background-position: center center;
 	background-repeat: no-repeat;
+	background-size: 100%;
 	position: absolute;
 	left: 0;
 	right: 0;
