--- a/css/main.css
+++ b/css/main.css
@@ -440,6 +440,7 @@ div.login-div {
 #post-comment-text > textarea {
 	border: transparent;
 	width: 100%;
+	height: 3.6em;
 }
 
 /* JQuery UI Overrides */
