--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ html {
 }
 
 body {
-	overflow: hidden;
+    overflow: hidden;
 }
 
 /*
@@ -155,15 +155,15 @@ textarea {
 
 #post-details-panel {
     /*width: 360px;
-   	position: fixed;
+        position: fixed;
     border-left: 5px solid #ccc;
     border-top: 5px solid #ccc;
     border-bottom: 5px solid #ccc;*/
 }
 
 .floating-panel {
-	width: 700px;
-   	position: fixed;
+    width: 700px;
+    position: fixed;
     border: 5px solid #ccc;
     left: 0;
     right: 0;
@@ -173,16 +173,16 @@ textarea {
 }
 
 .ajax-loading-div {
-	background: white;
-	background-image: url('/img/ajax.gif');
-	background-position: center center;
-	background-repeat: no-repeat;
-	position: absolute;
-	left: 0;
-	right: 0;
-	top: 0;
-	bottom: 0;
-	z-index: 1000;
+    background: white;
+    background-image: url('/img/ajax.gif');
+    background-position: center center;
+    background-repeat: no-repeat;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: 1000;
 }
 
 .body.row {
@@ -353,38 +353,38 @@ textarea {
 }
 
 .post-comment {
-	margin-bottom: 5px;
-	padding: 5px;
-	font-size: 0.9em !important;
+    margin-bottom: 5px;
+    padding: 5px;
+    font-size: 0.9em !important;
 }
 
 .post-comment .ui-state-default {
-	padding: 5px;
-	margin-bottom: 5px;
-	position: relative;
+    padding: 5px;
+    margin-bottom: 5px;
+    position: relative;
 }
 
 .post-comment-user-image {
-	background-position: center;
-	background-size: 100%;
-	width: 40px;
-	height: 40px;
-	background-repeat: no-repeat;
-	display: inline-block;
+    background-position: center;
+    background-size: 100%;
+    width: 40px;
+    height: 40px;
+    background-repeat: no-repeat;
+    display: inline-block;
 }
 
-.post-comment-user-name {
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	height: 1em;
-	margin-top: auto;
-	margin-bottom: auto;
-	margin-left: 10px;
+.post-comment-user-header {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    height: 1em;
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-left: 10px;
 }
 
 .post-comment a:hover {
-	text-decoration: underline;
+    text-decoration: underline;
 }
 
 div.right-toolbar-button {
@@ -398,15 +398,15 @@ div.right-toolbar-button {
 }
 
 #post-feed {
-   margin-left: 200px;
-   margin-top: 60px;
-   position: relative;
-   min-height: 730px;
+    margin-left: 200px;
+    margin-top: 60px;
+    position: relative;
+    min-height: 730px;
 }
 
 #left-rail {
     width: 180px;
-   	position: fixed;
+    position: fixed;
     padding: 5px;
 }
 
@@ -428,24 +428,24 @@ div.right-toolbar-button {
 }
 
 div.login-div {
-	position: absolute;
-	left: 0;
-	right: 0;
-	top: 0;
-	bottom: 0;
-	background: white;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background: white;
 }
 
 #post-comment-text {
-	margin-top: 10px;
-	margin-bottom: 10px;
-	border-thickness: 2px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border-thickness: 2px;
 }
 
 #post-comment-text > textarea {
-	border: transparent;
-	width: 100%;
-	height: 4.5em;
+    border: transparent;
+    width: 100%;
+    height: 4.5em;
 }
 
 /* JQuery UI Overrides */
