--- a/css/main.css
+++ b/css/main.css
@@ -377,10 +377,10 @@ textarea {
     position: absolute;
     top: 0;
     bottom: 0;
+    left: 60px;
     height: 1em;
     margin-top: auto;
     margin-bottom: auto;
-    margin-left: 10px;
 }
 
 .post-comment a:hover {
