--- a/css/main.css
+++ b/css/main.css
@@ -326,7 +326,16 @@ textarea {
 }
 
 #post-button-bar {
-    text-align: right;
+    width: 100%;
+}
+
+#post-button-bar > div {
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100px;
 }
 
 /*#post-permalink {
