--- a/css/main.css
+++ b/css/main.css
@@ -465,19 +465,13 @@ div.login-div {
     margin-bottom: 10px;
     border-width: 2px;
     height: 4.5em;
-    position: relative;
     padding: 2px;
 }
 
 #post-comment-text > textarea {
     border: transparent;
-/*    width: 100%;
-    height: 100%;*/
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
+    width: 100%;
+    height: 100%;
 }
 
 /* JQuery UI Overrides */
