--- a/css/main.css
+++ b/css/main.css
@@ -473,6 +473,8 @@ div.login-div {
     border: transparent;
     width: 100%;
     height: 100%;
+    margin-left: -2px;
+    margin-top: -2px;
 }
 
 /* JQuery UI Overrides */
