--- a/css/main.css
+++ b/css/main.css
@@ -194,8 +194,8 @@ textarea {
 .selection-item {
     padding-left: 5px;
     padding-right: 5px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 8px;
+    padding-bottom: 8px;
     display: block;
 }
 
@@ -203,12 +203,12 @@ textarea {
     
 }
 
-.selection-item.ui-icon {
+.selection-item .ui-icon {
     display: inline-block;
 }
 
 .selection-item div {
-    margin-left: 10px;
+    margin-left: 10px !important;
 }
 
 .body.row {
