--- a/css/main.css
+++ b/css/main.css
@@ -189,6 +189,9 @@ textarea {
 
 .selection-list {
     list-style: none;
+    padding: 0;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 .selection-item {
