--- a/css/main.css
+++ b/css/main.css
@@ -218,6 +218,14 @@ textarea {
     min-width: 300px !important;
 }
 
+.floating-panel.middle-panel {
+    height: 400px;
+    top: 0;
+    bottom: 0;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
 .body.row {
     top: 60px;
     bottom: 0;
