--- a/css/main.css
+++ b/css/main.css
@@ -166,15 +166,18 @@ textarea {
 
 .floating-panel {
     width: 700px;
+    background: transparent;
     position: fixed;
-    border: 5px solid #ccc;
     left: 0;
     right: 0;
     margin-left: auto;
     margin-right: auto;
     z-index: 1000;
-    margin-top: 100px;
-    margin-bottom: 100px;
+}
+
+.floating-panel.floating-panel-content {
+    border: 5px solid #ccc;
+    margin: 100px;
 }
 
 .ajax-loading-div {
