--- a/css/main.css
+++ b/css/main.css
@@ -175,7 +175,7 @@ textarea {
     z-index: 1000;
 }
 
-.floating-panel.floating-panel-content {
+.floating-panel > .floating-panel-content {
     border: 5px solid #ccc;
     position: absolute;
     left: 100px;
