--- a/css/main.css
+++ b/css/main.css
@@ -183,6 +183,7 @@ textarea {
     top: 25px;
     left: 0;
     right: 0;
+    padding: 10px;
 }
 
 .floating-panel-content > #panel-post-left {
@@ -323,7 +324,8 @@ textarea {
     word-wrap: break-word; /* Internet Explorer 5.5+ */
 }
 
-#panel-post > * {
+
+.floating-panel-content > * {
     margin-bottom: 10px;
 }
 
