--- a/css/main.css
+++ b/css/main.css
@@ -197,6 +197,7 @@ textarea {
 .floating-panel-content > #panel-post-right {
     width: 300px;
     right: 0;
+    position: absolute;
 }
 
 .ajax-loading-div {
