--- a/css/main.css
+++ b/css/main.css
@@ -149,7 +149,7 @@ textarea {
     text-decoration: none !important;
     border: 1px solid #0073ea !important;
     background: #0073ea url(flick-red/images/ui-bg_highlight-soft_25_0073ea_1x100.png) 50% 50% repeat-x !important; /* Custom Flick */
-/*    background: #1c94c4 !important;*/
+    /*    background: #1c94c4 !important;*/
     font-weight: bold !important;
 }
 
@@ -231,7 +231,7 @@ textarea {
 }
 
 .selection-item.ui-button-text {
-    
+
 }
 
 .selection-item .ui-icon {
@@ -365,7 +365,7 @@ textarea {
 
 #post-no-image {
     background-position: center center;
-/*    background-size: 50%;*/
+    /*    background-size: 50%;*/
     background-repeat: no-repeat;
     background-image: url("/img/no-image.png");
     height: 350px;
@@ -393,7 +393,14 @@ textarea {
     right: 0;
     margin-left: auto;
     margin-right: auto;
-    width: 226px;
+    width: 236px;
+}
+
+.centered-h {
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /*#post-permalink {
@@ -444,7 +451,7 @@ textarea {
 
 .post-comment .ui-state-default {
     padding: 5px;
-/*    margin-bottom: 5px;*/
+    /*    margin-bottom: 5px;*/
     position: relative;
 }
 
