--- a/css/main.css
+++ b/css/main.css
@@ -242,7 +242,7 @@ textarea {
     margin-left: 10px !important;
 }
 
-.floating-panel.middle-panel {
+.floating-panel.narrow-floating-panel {
     width: 400px !important;
 }
 
