--- a/css/main.css
+++ b/css/main.css
@@ -180,7 +180,9 @@ textarea {
 
 .floating-panel {
     width: 1000px;
-    background: transparent;
+    background-color: transparent;
+    background-image: url('/img/panel-close.png');
+    background-position: 100% 0%;
     position: fixed;
     left: 0;
     right: 0;
