--- a/css/main.css
+++ b/css/main.css
@@ -182,7 +182,7 @@ textarea {
     width: 1000px;
     background-color: transparent;
     background-image: url('/img/panel-close.png');
-    background-repeat: none;
+    background-repeat: no-repeat;
     background-position: 100% 0%;
     position: fixed;
     left: 0;
