--- a/css/main.css
+++ b/css/main.css
@@ -197,8 +197,8 @@ textarea {
     cursor: pointer;
     z-index: 1001;
     position: absolute;
-    right: -35px;
-    top: -10px;
+    right: -25px;
+    top: 0;
 }
 
 .floating-panel > .floating-panel-content {
