--- a/css/main.css
+++ b/css/main.css
@@ -198,6 +198,7 @@ textarea {
 .floating-panel > .floating-panel-content {
     border: 5px solid #ccc;
     border-radius: 5px;
+    border-top-right-radius: 0px;
     position: absolute;
     bottom: 25px;
     top: 25px;
