--- a/css/main.css
+++ b/css/main.css
@@ -190,8 +190,8 @@ textarea {
     width: 30px;
     z-index: 1001;
     position: absolute;
-    right: -30px;
-    top: 25px;
+    right: 0;
+    top: -5px;
 }
 
 .close-button:hover {
