--- a/css/main.css
+++ b/css/main.css
@@ -545,6 +545,7 @@ div.right-toolbar-button {
     position: fixed;
     width: 100%;
     border-bottom: 1px solid #ccc;
+    z-index: 1002;
 }
 
 .button-nav {
