--- a/css/main.css
+++ b/css/main.css
@@ -551,6 +551,10 @@ div.right-toolbar-button {
     border-bottom: 1px solid #ccc;
 }
 
+.semi-transparent {
+    opacity: 70%;
+}
+
 .button-nav {
     width: 100%;
     margin-top: 4px;
