--- a/css/main.css
+++ b/css/main.css
@@ -530,7 +530,7 @@ div.right-toolbar-button {
     margin-left: 200px;
     margin-top: 60px;
     position: relative;
-/*    min-height: 800px;*/
+    min-height: 800px;
 }
 
 #left-rail {
