--- a/css/main.css
+++ b/css/main.css
@@ -333,16 +333,16 @@ textarea {
 /*http://jsfiddle.net/E78q3/*/
 
 .post-block {
-    position: absolute;
+    display: inline-block;
     background: #eee;
     padding: 10px;
-    min-height: 200px;
-    min-width: 200px;
+    height: 160px;
+    width: 280px;
     border: 1px solid #ddd;
 }
 
 .post-tile {
-    width: 200px;
+    width: 300px;
     height: 200px;
     margin: 4px;
     padding: 10px;
