--- a/css/main.css
+++ b/css/main.css
@@ -334,7 +334,7 @@ textarea {
 
 .post-block {
     display: inline-block;
-    background: #eee;
+    background: #ddd;
     padding: 5px;
     height: 160px;
     width: 280px;
