--- a/css/main.css
+++ b/css/main.css
@@ -334,11 +334,12 @@ textarea {
 
 .post-block {
     display: inline-block;
-    background: #f6f6f6;
+    background: white;
     padding: 5px;
     height: 160px;
     width: 280px;
-    border: 1px solid #ddd;
+/*    border: 1px solid #ddd;*/
+    box-shadow: 0 1px 1px 0;
     border-radius: 5px;
     overflow: hidden;
     margin: 3px;
