--- a/css/main.css
+++ b/css/main.css
@@ -339,7 +339,7 @@ textarea {
     height: 160px;
     width: 280px;
 /*    border: 1px solid #ddd;*/
-    box-shadow: 0 1px 1px 0;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.18);
     border-radius: 5px;
     overflow: hidden;
     margin: 3px;
