--- a/css/main.css
+++ b/css/main.css
@@ -356,7 +356,7 @@ textarea {
     padding: 1px;
     background-repeat: no-repeat;
     background-position: center center;
-    background-size: cover;
+    background-size: contain;
 }
 
 .post-tile {
