--- a/css/main.css
+++ b/css/main.css
@@ -337,7 +337,7 @@ textarea {
     display: inline-block;
     background: white;
     height: 200px;
-    width: 200px;
+    width: 250px;
 /*    border: 1px solid #ddd;*/
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.18);
     border-radius: 5px;
@@ -356,7 +356,7 @@ textarea {
     padding: 1px;
     background-repeat: no-repeat;
     background-position: center center;
-    background-size: contain;
+    background-size: cover;
 }
 
 .post-tile {
